# teapicli

./: .eslintrc.js  .gitignore  Cargo.toml  LICENSE  README.md  collection.json  config.json  jest.config.js  lefthook.yml  package.json  tsconfig.json
.github/workflows/: build.yml
src/: App.tsx  Client.ts  Configuration.ts  Response.ts  app.ts  app.tsx  cli.ts  cli.tsx  commands.rs  main.rs  runner.rs  state.rs  types.d.ts
src/Clients/: AxiosClient.ts  index.ts
src/Collections/: AvailableImporters.ts  Collection.ts  Endpoint.ts  Environment.test.ts  Environment.ts  Exporter.ts  Importer.ts  Request.ts  index.ts
src/Collections/Exporters/: TeapicliExporter.ts
src/Collections/Importers/: ApitecliImporter.ts  TeapicliImporter.ts
src/Events/: index.ts
src/Shell/: commands.ts
src/Store/: CollectionStore.ts  CommandsStore.ts  MessagesStore.ts  ViewsStore.ts  index.tsx
src/UserInterface/: Color.ts  FullScreen.tsx  MessagesComponent.tsx  Pager.tsx  Selector.tsx  StatusBarComponent.tsx  Tabs.tsx  index.ts  index.tsx
src/UserInterface/CollectionComponent/: index.tsx
src/UserInterface/CurrentRequestComponent/: index.tsx
src/UserInterface/EnvironmentsComponent/: index.tsx
src/UserInterface/MainView/: CollectionComponent.tsx  EnvironmentsComponent.tsx  RequestsComponent.tsx  ResponseComponent.tsx  SelectedRequestComponent.tsx  (+1 more)
src/components/: HomePage.tsx
src/event/: events.rs  mod.rs
src/state/: commands.rs  mod.rs
src/store/: collectionSlice.ts  store.ts
src/ui/: main.rs  main_view.rs  mod.rs
src/view/: bottom_bar.rs  main_view.rs  mod.rs
(+19 files in other folders)
