[package]
name = "teapicli"
version = "0.1.0"
authors = ["Martin Schenck <martinschenck@fastmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.17"
tui = { version = "0.10", default-features = false, features = ['crossterm'] }
